# playlist-generator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  cliff.toml  lefthook.yml  pyproject.toml  scripts.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
crateport/: __main__.py  auth.py  cli.py  config.py  converter.py  database.py  deezer_api.py  exporter.py  input_parser.py  isrc_resolver.py  models.py  musicbrainz_api.py  playlist_generator.py
docs/: convert.md  generate.md  project_plan.md
src/: __main__.py  cli.py  config.py  deezer_api.py  exporter.py  input_parser.py  models.py  musicbrainz_api.py  playlist_generator.py
