[project]
name = "crateport"
version = "0.1.0"
description = ""
authors = [
    {name = "Phillip Stockmann",email = "zyanklee@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "click (>=8.1,<9.0)",
    "python-dotenv (>=1.0,<2.0)"
]

[dependency-groups]
dev = [
    "black (>=26.3.0,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
