[project]
name = "crateport"
version = "1.0.1"
description = "DJ-focused playlist tool: generate from artist/track lists or convert VirtualDJ exports to Soundiiz-ready CSVs with ISRC enrichment."
authors = [
    {name = "Phillip Stockmann",email = "ZyanKLee@users.noreply.github.com"}
]
homepage = "https://github.com/ZyanKLee/crateport"
repository = "https://github.com/ZyanKLee/crateport"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["deezer", "playlist", "csv", "music"]
requires-python = ">=3.14,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "click (>=8.1,<9.0)",
    "python-dotenv (>=1.0,<2.0)"
]

[project.scripts]
crateport = "crateport.cli:cli"

[tool.poetry.group.dev.dependencies]
black = ">=26.3.0,<27.0.0"
pylint = ">=4.0.5,<5.0.0"
isort = ">=8.0.1,<9.0.0"
python-semantic-release = "^10.5.3"


[tool.poetry]
name = "crateport"
packages = [{include = "crateport"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
commit_message = "chore(release): v{version}"
tag_format = "v{version}"
upload_to_vcs_release = true

[tool.semantic_release.changelog]
mode = "init"
exclude_commit_patterns = [
    "^chore\\(release\\):",
]

[tool.semantic_release.changelog.default_templates]
mask_initial_release = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
